# EldenRing-Save-Manager

./: .gitignore  SaveManager.spec  build-linux.sh  build-windows.ps  build-windows.ps1  pyproject.toml
.github/workflows/: python-app.yaml  python-linux.yaml
